2010-01-08 Fred Kiefer <FredKiefer@gmx.de>

	* Source/win32/w32_text_focus.m: Small clean up in focus handling.

2009-12-19 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/cairo/CairoGState.m:
	-DPSsetflat: and -DPScurrentflat should not have been transforming
	the flatness value with the current transformation matrix.
	The effect of this could be seen in the Apple BezierPathLab example;
	zooming in on the circle caused it to look more and more like a
	polygon.

2009-12-11 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/cairo/CairoGState.m: 
	Add a call to cairo_pattern_set_extend(pattern, CAIRO_EXTEND_PAD);
	on the pattern used to draw images. This keeps the edges of images
	crisp when the are scaled up.
	The description from the Cairo docs is: "pixels outside of the
	pattern copy the closest pixel from the source".

2009-11-19 Doug Simons

	* Source/x11/XGServerWindow.m:
	Make sure we return current window bounds.

2009-11-16 Riccardo Mottola <rmottola@users.sf.net>

	* Source\win32\WIN32Server.m: Remove left-over call to a mouse down
	event in a mouse-up
	
2009-11-10 Richard Frith-Macdonald <rfm@gnu.org>

	* Source\win32\WIN32Server.m: Track mouse button state so that when
	mouse down events are lost (which appears occasionally to be the case)
	we can simulate the missing event.

2009-11-08 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m (-windowDevice:): Don't return a
	static variable as the window device.	

2009-11-05 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m: Set the colour for all text drawing.

2009-11-04 Fred Kiefer <FredKiefer@gmx.de>

	* Source/gsc/GSGState.m (-setColor:state:): Don't handle alpha specially.
	* Source/cairo/CairoGState.m: Clean up last change.

2009-11-04 Richard Frith-Macdonald <rfm@gnu.org>

	* Source\winlib\WIN32GState.m: Fixes for read image.
	* Source\win32\WIN32Server.m: Use layered window for alpha.

2009-11-03 Fred Kiefer <FredKiefer@gmx.de>
