@@ -1,3 +1,8 @@
+2010-01-10 Riccardo Mottola <rmottola@users.sf.net>
+
+	* Source/win32/w32_activate.m: generate GSAppKitWindowLeave leave
+	events.
+	
 2010-01-08 Fred Kiefer <FredKiefer@gmx.de>
 
 	* Source/win32/w32_text_focus.m: Small clean up in focus handling.
